--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-# HunterXHunter
-Hunter X Hunter Character database
+<html>
+  <head>
+    <title>meow :3</title>
+  </head>
+  <body>
+    <h2>Meow :3</h2>
+  </body>
+</html>
